Farmer's Market Fix + Arboreal Extractor
- Added a tooltip for the Farmer’s Market
- Modded Seeds can now be found in the Farmer’s Market
- Changed Arboreal Extractor Recipe
- Bronze Plate recipe
- Crushing Hammer has a recipe
- Disabled Gear Casts and Plate Casts

--- a/kubejs/assets/geolosys/lang/en_us.json
+++ b/kubejs/assets/geolosys/lang/en_us.json
@@ -11,7 +11,7 @@
   "block.geolosys.cassiterite_ore": "Cassiterite",
   "block.geolosys.teallite_ore": "Teallite",
   "block.geolosys.galena_ore": "Galena",
-  "block.geolosys.bauxite_ore": "Aluminum",
+  "block.geolosys.bauxite_ore": "Aluminum Ore",
   "block.geolosys.autunite_ore": "Autunite",
   "block.geolosys.platinum_ore": "Platinum",
   "block.geolosys.sphalerite_ore": "Sphalerite",
