--- a/kubejs/assets/mbd2/lang/en_us.json
+++ b/kubejs/assets/mbd2/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "block.mbd2.primitive_smelter": "Primitive Smelter",
-    "block.mbd2.stone_fuel_bus": "Stone Fuel Hatch",
+    "block.mbd2.stone_fuel_hatch": "Stone Fuel Hatch",
     "block.mbd2.stone_output_bus": "Stone Output Bus",
     "block.mbd2.stone_input_bus": "Stone Input Bus",
     "block.mbd2.super_extractor": "Super Extractor",
